--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /*
-Theme Name: Tashbir 
-Theme URI:  
+Theme Name: T-Gallery  
+Theme URI: https://github.com/Anilmgr/gallerytheme
+Author: T-G team
+Author URI: 
+Description: A gallery theme for photographers. Best way to showcase your photography.
+Version: 1.0
+License: MIT license
+License URI: https://github.com/Anilmgr/gallerytheme/blob/master/LICENSE
+Text Domain: gallerytheme
 */
